--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "homepage": "https://github.com/8ahmedanwer8/valedictorian#readme",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.5.1",
+    "node-fetch": "^3.2.10",
     "nodemon": "^2.0.19"
   }
 }
